[gd_scene load_steps=19 format=2]

[ext_resource path="res://Bosses/blub1.png" type="Texture" id=1]
[ext_resource path="res://Bosses/blub2.png" type="Texture" id=2]
[ext_resource path="res://Bosses/blub3.png" type="Texture" id=3]
[ext_resource path="res://BlobSpawner.gd" type="Script" id=4]
[ext_resource path="res://Bosses/blubhsoot6.png" type="Texture" id=5]
[ext_resource path="res://Bosses/blubhsoot7.png" type="Texture" id=6]
[ext_resource path="res://Bosses/blubhsoot11.png" type="Texture" id=7]
[ext_resource path="res://Bosses/blubhsoot10.png" type="Texture" id=8]
[ext_resource path="res://Bosses/blubhsoot4.png" type="Texture" id=9]
[ext_resource path="res://Bosses/blubhsoot8.png" type="Texture" id=10]
[ext_resource path="res://Bosses/blubhsoot9.png" type="Texture" id=11]
[ext_resource path="res://Bosses/blubhsoot5.png" type="Texture" id=12]
[ext_resource path="res://Bosses/blubhsoot1.png" type="Texture" id=13]
[ext_resource path="res://Bosses/blubhsoot2.png" type="Texture" id=14]
[ext_resource path="res://Bosses/blubhsoot3.png" type="Texture" id=15]

[sub_resource type="CylinderShape" id=1]
radius = 2.5
height = 5.0

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spawning"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ) ]
}

[node name="BlobSpawner" type="StaticBody" groups=[
"Blub",
"Enemy",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 4 )

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Spawning = SubResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1, 0 )
billboard = 1
texture = ExtResource( 1 )
[connection signal="timeout" from="SpawnerTimer" to="." method="_on_SpawnerTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
